@@ -26,11 +26,6 @@
             <groupId>cz.muni.fi.xharting.classic</groupId>
             <artifactId>classic-api</artifactId>
         </dependency>
-<!--         <dependency> -->
-<!--             <groupId>org.jboss.solder</groupId> -->
-<!--             <artifactId>solder-api</artifactId> -->
-<!--             <scope>compile</scope> -->
-<!--         </dependency> -->
         <dependency>
             <groupId>org.jboss.solder</groupId>
             <artifactId>solder-impl</artifactId>
@@ -124,7 +119,9 @@
         <profile>
             <id>jbossas-remote-7</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>incontainer-remote</name>
+                </property>
             </activation>
             <dependencies>
                 <dependency>
@@ -137,6 +134,12 @@
         </profile>
         <profile>
             <id>jbossas-managed</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>incontainer</name>
+                </property>
+            </activation>
             <dependencies>
                 <dependency>
                     <groupId>org.jboss.as</groupId>
@@ -155,9 +158,16 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Dependencies>javax.faces.api</Dependencies>
+                            <Dependencies>javax.faces.api,org.dom4j</Dependencies>
                         </manifestEntries>
                     </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
         </plugins>
